--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,11 @@
-cmake_minimum_required (VERSION 3.14)
+cmake_minimum_required (VERSION 3.10)
+
+set (CMAKE_CXX_STANDARD 11)
 
 project(Soon)
 
-add_library (Soon INTERFACE)
-
 add_subdirectory(Modules)
 
-add_subdirectory(ThirdParty/glfw)
+add_subdirectory(ThirdParty)
+
+add_library (Soon INTERFACE)
