--- a/Source/Graphics/GLFW/OpenGL/CMakeLists.txt
+++ b/Source/Graphics/GLFW/OpenGL/CMakeLists.txt
@@ -1,4 +1,7 @@
 cmake_minimum_required (VERSION 3.10)
 
+set(OPENGL_MAJOR_VERSION 4)
+set(OPENGL_MINOR_VERSION 1)
+
 add_library(Graphics Window.cpp
 	)
