--- a/Modules/ECS/CMakeLists.txt
+++ b/Modules/ECS/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 project(ECS)
 
 set (CMAKE_CXX_STANDARD 11)
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 
 add_library(ECS
 	ClassTypeId.hpp
