CMAKE Arch built

--- a/Source/Graphics/CMakeLists.txt
+++ b/Source/Graphics/CMakeLists.txt
@@ -1,3 +1,7 @@
 cmake_minimum_required (VERSION 3.10)
 
-add_subdirectory(OpenGL)
+add_subdirectory(GLFW)
+
+add_library(Graphics INTERFACE)
+
+target_link_libraries(Graphics INTERFACE GLFW)
