--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -3,4 +3,4 @@ cmake_minimum_required (VERSION 3.10)
 add_subdirectory(Core)
 add_subdirectory(Graphics)
 add_subdirectory(Scene)
-add_subdirectory(Utilities)
+#add_subdirectory(Utilities)
