--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ project(Soon)
 
 add_subdirectory(Source)
 add_subdirectory(Modules)
-
 add_subdirectory(ThirdParty)
 
 add_library (Soon INTERFACE)
+target_link_libraries( Soon )
