--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -4,3 +4,8 @@ add_subdirectory(Core)
 add_subdirectory(Graphics)
 add_subdirectory(Scene)
 #add_subdirectory(Utilities)
+
+add_library(Source INTERFACE
+	)
+
+target_link_libraries(Source INTERFACE Core)
