--- a/Source/Graphics/GLFW/CMakeLists.txt
+++ b/Source/Graphics/GLFW/CMakeLists.txt
@@ -4,10 +4,13 @@ set(SOURCE
 	OSGLFW.cpp
 	GLFWInput.cpp
 	InitGLFW.cpp
+	GLFWCallback.cpp
 	)
 
-add_library(GLFW ${SOURCE})
+add_library(GraphicsGLFW ${SOURCE})
 
-add_subdirectory(OpenGL)
+add_subdirectory( GLFWOpenGL )
 
-target_link_libraries(GLFW OpenGL)
+target_link_libraries(GraphicsGLFW GLFWOpenGL glfw)
+
+#find_package(OpenGL REQUIRED)
