--- a/Source/Graphics/CMakeLists.txt
+++ b/Source/Graphics/CMakeLists.txt
@@ -4,4 +4,4 @@ add_subdirectory(GLFW)
 
 add_library(Graphics INTERFACE)
 
-target_link_libraries(Graphics INTERFACE GLFW)
+target_link_libraries(Graphics INTERFACE GraphicsGLFW)
