Add Vulkan context creation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ option (USE_VULKAN "Use Vulkan" OFF)
 include_directories(Source)
 include_directories(Modules)
 include_directories(ThirdParty/glfw/include/)
+include_directories(ThirdParty/)
 
 set (CMAKE_CXX_STANDARD 11)
 
