--- a/Source/Graphics/GLFW/GLFWVulkan/CMakeLists.txt
+++ b/Source/Graphics/GLFW/GLFWVulkan/CMakeLists.txt
@@ -9,6 +9,14 @@ add_library(GLFWVulkan
 	${SRC}
 	)
 
-target_link_libraries(GLFWVulkan glfw)
+find_library(
+		VULKAN_LIB
+		NAMES libvulkan.dylib
+		HINTS "/Users/nrouzeva/Documents/42_PJ/Soon_engine/ThirdParty/vulkan/libs/macos/"
+		NO_DEFAULT_PATH
+	)
+
+#link_directories("/Users/nrouzeva/Documents/42_PJ/Soon_engine/ThirdParty/vulkan/libs")
+target_link_libraries(GLFWVulkan glfw ${VULKAN_LIB})
 #// APPLE
 target_link_libraries(GLFWVulkan "-framework AppKit -framework OpenGL -framework IOKit -framework CoreVideo")
