--- a/Source/Graphics/CMakeLists.txt
+++ b/Source/Graphics/CMakeLists.txt
@@ -2,6 +2,6 @@ cmake_minimum_required (VERSION 3.10)
 
 add_subdirectory(GLFW)
 
-add_library(Graphics INTERFACE)
+add_library(Graphics "GraphicsInstance.cpp")
 
-target_link_libraries(Graphics INTERFACE GraphicsGLFW)
+target_link_libraries(Graphics GraphicsGLFW)
