Add linux vulkan compiling

--- a/Source/Graphics/GLFW/GLFWVulkan/CMakeLists.txt
+++ b/Source/Graphics/GLFW/GLFWVulkan/CMakeLists.txt
@@ -9,12 +9,25 @@ add_library(GLFWVulkan
 	${SRC}
 	)
 
+
+if(APPLE)
+message(${CMAKE_SOURCE_DIR})
 find_library(
 		VULKAN_LIB
 		NAMES libvulkan.dylib
-		HINTS "/Users/nrouzeva/Documents/42_PJ/Soon_engine/ThirdParty/vulkan/libs/macos/"
+		HINTS "${CMAKE_SOURCE_DIR}/ThirdParty/vulkan/libs/macos/"
 		NO_DEFAULT_PATH
 	)
+elseif(UNIX)
+message(${CMAKE_SOURCE_DIR})
+find_library(
+		VULKAN_LIB
+		NAMES libvulkan.so
+		HINTS "${CMAKE_SOURCE_DIR}/ThirdParty/vulkan/libs/linux/"
+		NO_DEFAULT_PATH
+	)
+
+endif()
 
 target_compile_definitions(GLFWVulkan PUBLIC USE_VULKAN)
 #link_directories("/Users/nrouzeva/Documents/42_PJ/Soon_engine/ThirdParty/vulkan/libs")
