--- a/Source/Graphics/GLFW/CMakeLists.txt
+++ b/Source/Graphics/GLFW/CMakeLists.txt
@@ -5,14 +5,15 @@ set(SOURCE
 	GLFWInput.cpp
 	InitGLFW.cpp
 	GLFWCallback.cpp
+	"../GraphicsInstance.cpp"
 	)
 
 add_library(GraphicsGLFW ${SOURCE})
 
 if (${USE_VULKAN})
 	add_subdirectory( GLFWVulkan )
-	target_link_libraries(GraphicsGLFW GLFWVulkan glfw)
+	target_link_libraries(GraphicsGLFW GLFWVulkan glfw Input)
 else()
 	add_subdirectory( GLFWOpenGL )
-	target_link_libraries(GraphicsGLFW GLFWOpenGL glfw)
+	target_link_libraries(GraphicsGLFW GLFWOpenGL glfw Input)
 endif()
