--- a/Source/Graphics/GLFW/GLFWVulkan/CMakeLists.txt
+++ b/Source/Graphics/GLFW/GLFWVulkan/CMakeLists.txt
@@ -10,12 +10,12 @@ add_library(GLFWVulkan
 	)
 
 if(APPLE)
-	find_library(
-			VULKAN_LIB
-			NAMES libvulkan.dylib
-			HINTS "${CMAKE_SOURCE_DIR}/ThirdParty/vulkan/libs/macos/"
-			NO_DEFAULT_PATH
-		)
+#	find_library(
+#			VULKAN_LIB
+#			NAMES libvulkan.dylib
+#			HINTS "${CMAKE_SOURCE_DIR}/ThirdParty/vulkan/libs/macos/"
+#			NO_DEFAULT_PATH
+#		)
 
 	find_library(
 			MOLTENVK_LIB
@@ -24,6 +24,7 @@ if(APPLE)
 			NO_DEFAULT_PATH
 		)
 
+target_link_libraries(GLFWVulkan glfw ${MOLTENVK_LIB})
 #set(PRIVATE_COMPILE_DEFINITIONS VK_USE_PLATFORM_MACOS_MVK=1)
 #include_directories("${CMAKE_SOURCE_DIR}/ThirdParty/MoltenVK/include")
 
@@ -34,12 +35,12 @@ elseif(UNIX)
 			HINTS "${CMAKE_SOURCE_DIR}/ThirdParty/vulkan/libs/linux/"
 			NO_DEFAULT_PATH
 		)
+	target_link_libraries(GLFWVulkan glfw ${VULKAN_LIB})
 
 endif()
 
 target_compile_definitions(GLFWVulkan PUBLIC USE_VULKAN)
 #link_directories("/Users/nrouzeva/Documents/42_PJ/Soon_engine/ThirdParty/vulkan/libs")
 #target_link_libraries(GLFWVulkan glfw ${VULKAN_LIB} ${MOLTENVK_LIB})
-target_link_libraries(GLFWVulkan glfw ${MOLTENVK_LIB})
 #// APPLE
 #target_link_libraries(GLFWVulkan "-framework AppKit -framework OpenGL -framework IOKit -framework CoreVideo")
