--- a/Source/Graphics/GLFW/GLFWVulkan/CMakeLists.txt
+++ b/Source/Graphics/GLFW/GLFWVulkan/CMakeLists.txt
@@ -12,7 +12,7 @@ add_library(GLFWVulkan
 if(APPLE)
 	find_library(
 			VULKAN_LIB
-			NAMES libvulkan.1.1.101.dylib
+			NAMES libvulkan.1.1.101.dylib libvulkan.dylib
 			HINTS "${CMAKE_SOURCE_DIR}/ThirdParty/vulkan/libs/macos/"
 			NO_DEFAULT_PATH
 		)
@@ -24,7 +24,7 @@ if(APPLE)
 			NO_DEFAULT_PATH
 		)
 
-target_link_libraries(GLFWVulkan  glfw ${MOLTENVK_LIB} )
+target_link_libraries(GLFWVulkan glfw ${VULKAN_LIB})
 #link_directories("${CMAKE_SOURCE_DIR}/ThirdParty/vulkan/libs/macos/")
 #set(PRIVATE_COMPILE_DEFINITIONS VK_USE_PLATFORM_MACOS_MVK=1)
 #include_directories("${CMAKE_SOURCE_DIR}/ThirdParty/MoltenVK/include")
