Continue : Dirty Render System, need to change the modularity of the Graphics class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required (VERSION 3.10)
 
-option (USE_VULKAN "Use Vulkan" OFF) 
+option (USE_VULKAN "Use Vulkan" ON) 
 
 #set(ENV{VK_ICD_FILENAMES} ${CMAKE_SOURCE_DIR}/ThirdParty/MoltenVK/macOS/MoltenVK_icd.json)
 
