--- a/Source/Graphics/GLFW/GLFWVulkan/CMakeLists.txt
+++ b/Source/Graphics/GLFW/GLFWVulkan/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required (VERSION 3.10)
 set (SRC
 	GLFWVulkan.cpp
 	GLFWVulkanHints.cpp
+	GLFWVulkanRenderer.cpp
 	)
 
 add_library(GLFWVulkan
