TMP : Removing Files, Renames Files, try to compile

--- a/Source/Graphics/GLFW/CMakeLists.txt
+++ b/Source/Graphics/GLFW/CMakeLists.txt
@@ -1,20 +1,13 @@
 cmake_minimum_required (VERSION 3.10)
 
 set(SOURCE
-	OSGLFW.cpp
-	GLFWInput.cpp
-	InitGLFW.cpp
-	GLFWCallback.cpp
-	"../GraphicsInstance.cpp"
-	"../GraphicsRenderer.cpp"
+	Init.cpp
+	Hints.cpp
+	Callback.cpp
 	)
 
 add_library(GraphicsGLFW ${SOURCE})
 
-if (${USE_VULKAN})
-	add_subdirectory( GLFWVulkan )
-	target_link_libraries(GraphicsGLFW GLFWVulkan glfw Input)
-else()
-	add_subdirectory( GLFWOpenGL )
-	target_link_libraries(GraphicsGLFW GLFWOpenGL glfw Input)
+target_link_libraries(GraphicsGLFW glfw Input)
+
 endif()
