--- a/Source/Graphics/Vulkan/CMakeLists.txt
+++ b/Source/Graphics/Vulkan/CMakeLists.txt
@@ -1,9 +1,8 @@
 cmake_minimum_required (VERSION 3.10)
 
 set (SRC
-	GLFWVulkan.cpp
-	GLFWVulkanHints.cpp
-	GLFWVulkanRenderer.cpp
+	GraphicsInstance.cpp
+	GraphicsRenderer.cpp
 	)
 
 add_library(GLFWVulkan
