Remove OpenGL support, Remove SDL Support

--- a/Source/Graphics/CMakeLists.txt
+++ b/Source/Graphics/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required (VERSION 3.10)
 
 add_subdirectory(GLFW)
+add_subdirectory(Vulkan)
 
 add_library(Graphics INTERFACE)
 
-target_link_libraries(Graphics INTERFACE GraphicsGLFW)
-
+target_link_libraries(Graphics INTERFACE GraphicsGLFW GraphicsVulkan)
