Parse 3D Obj, Begin Scene Tree

--- a/Source/Core/CMakeLists.txt
+++ b/Source/Core/CMakeLists.txt
@@ -7,5 +7,6 @@ set(SRC
 add_library(Core ${SRC})
 
 add_subdirectory(OS)
+add_subdirectory(Parsers)
 
-target_link_libraries(Core OS)
+target_link_libraries(Core OS Parsers)
