Correct Camera Rotation, Add stb lib and assimp

--- a/Source/Core/CMakeLists.txt
+++ b/Source/Core/CMakeLists.txt
@@ -7,6 +7,7 @@ set(SRC
 add_library(Core ${SRC})
 
 add_subdirectory(OS)
-add_subdirectory(Parsers)
+#add_subdirectory(Parsers)
 
-target_link_libraries(Core OS Parsers)
+#target_link_libraries(Core OS Parsers)
+target_link_libraries(Core OS)
