--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "ThirdParty/stb"]
 	path = ThirdParty/stb
 	url = https://github.com/nothings/stb
+[submodule "ThirdParty/assimp_lib"]
+	path = ThirdParty/assimp_lib
+	url = https://github.com/assimp/assimp
