--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,13 @@
 cmake_minimum_required (VERSION 3.10)
 
+execute_process(COMMAND source export.sh)
+
 option (USE_VULKAN "Use Vulkan" ON) 
 
 #set(ENV{VK_ICD_FILENAMES} ${CMAKE_SOURCE_DIR}/ThirdParty/MoltenVK/macOS/MoltenVK_icd.json)
+set(ENV{VK_ICD_FILENAMES} "/Users/nrouzeva/Documents/42_PJ/Soon_engine/ThirdParty/MoltenVK/macOS/MoltenVK_icd.json")
+set(ENV{VK_LAYER_PATH} "/Users/nrouzeva/Documents/42_PJ/Soon_engine/ThirdParty/vulkan/Validation_Layer/explicit_layer.d/macos/")
+
 
 if(${USE_VULKAN})
 	add_definitions(-DUSE_VULKAN)
