--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,14 @@
 cmake_minimum_required (VERSION 3.10)
 
-execute_process(COMMAND source export.sh)
+#execute_process(COMMAND source export.sh)
+set (CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_COMPILER /usr/bin/g++-8)
+
+if (UNIX)
+	execute_process(COMMAND apt-get install libx11-dev)
+	execute_process(COMMAND apt-get install xorg-dev libglu1-mesa-dev)
+	execute_process(COMMAND apt install libvulkan1 mesa-vulkan-drivers vulkan-utils)
+endif(UNIX)
 
 option (USE_VULKAN "Use Vulkan" ON) 
 
@@ -19,9 +27,9 @@ include_directories(ThirdParty/glfw/include/)
 include_directories(ThirdParty/assimp_lib/include/)
 include_directories(ThirdParty/)
 
-set (CMAKE_CXX_STANDARD 11)
-
 project(Soon)
+
+add_compile_options(-Wall -Wextra)
 
 add_subdirectory(Source)
 add_subdirectory(Modules)
