--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,13 +2,17 @@ cmake_minimum_required (VERSION 3.10)
 
 #execute_process(COMMAND source export.sh)
 set (CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_COMPILER /usr/bin/g++-8)
 
 if (UNIX)
+	set(CMAKE_CXX_COMPILER /usr/bin/g++-8)
 	execute_process(COMMAND apt-get install libx11-dev)
 	execute_process(COMMAND apt-get install xorg-dev libglu1-mesa-dev)
 	execute_process(COMMAND apt install libvulkan1 mesa-vulkan-drivers vulkan-utils)
 endif(UNIX)
+
+if (APPLE)
+	set(CMAKE_CXX_COMPILER /Users/nrouzeva/.brew/Cellar/gcc/8.3.0/bin/g++-8)
+endif (APPLE)
 
 option (USE_VULKAN "Use Vulkan" ON) 
 
