--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,10 @@
 cmake_minimum_required (VERSION 3.10)
 
 #execute_process(COMMAND source export.sh)
-set (CMAKE_CXX_STANDARD 11)
+set (CMAKE_CXX_STANDARD 20)
 
 set(GLFW_BUILD_EXAMPLES "Build the GLFW example programs" OFF FORCE)
 set(GLFW_BUILD_TESTS "Build the GLFW test programs" OFF FORCE)
-set ( ASSIMP_BUILD_TESTS
-  "If the test suite for Assimp is built in addition to the library."
-  OFF FORCE
-)
-
-
-
 if (UNIX AND NOT APPLE)
 	set(CMAKE_CXX_COMPILER /usr/bin/g++-8)
 	execute_process(COMMAND apt-get install libx11-dev)
@@ -20,7 +13,7 @@ if (UNIX AND NOT APPLE)
 endif()
 
 if (APPLE)
-	set(CMAKE_CXX_COMPILER /Users/nrouzeva/.brew/Cellar/gcc/8.3.0/bin/g++-8)
+	set(CMAKE_CXX_COMPILER /Users/nrouzeva/.brew/Cellar/gcc/9.2.0_1/bin/g++-9)
 endif ()
 
 option (USE_VULKAN "Use Vulkan" ON) 
@@ -43,7 +36,7 @@ include_directories(ThirdParty/)
 
 LINK_DIRECTORIES(
 	  ${Assimp_BINARY_DIR}
-	    ${Assimp_BINARY_DIR}/lib
+	    ${Assimp_BINARY_DIR}/code/
 		)
 
 
@@ -51,10 +44,14 @@ project(Soon)
 
 add_compile_options(-Wall -Wextra -g3)
 
+option (ASSIMP_BUILD_TESTS OFF)
+option(ASSIMP_NO_EXPORT "" ON)
+option (ASSIMP_BUILD_ALL_IMPORTERS_BY_DEFAULT "" OFF)
+set(ASSIMP_BUILD_OBJ_IMPORTER ON FORCE)
+
 add_subdirectory(Source)
 add_subdirectory(Modules)
 add_subdirectory(ThirdParty)
-
 add_subdirectory(Exemples)
 
 add_library (Build INTERFACE)
