--- a/Source/Graphics/GLFW/CMakeLists.txt
+++ b/Source/Graphics/GLFW/CMakeLists.txt
@@ -8,4 +8,4 @@ set(SOURCE
 
 add_library(GraphicsGLFW ${SOURCE})
 
-target_link_libraries(GraphicsGLFW glfw Input)
+target_link_libraries(GraphicsGLFW glfw)
