--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required (VERSION 3.10)
 
+add_compile_options(-Wall -Wextra -g3)
+
 add_subdirectory(Core)
 add_subdirectory(Graphics)
 add_subdirectory(Scene)
