--- a/Source/Scene/3D/CMakeLists.txt
+++ b/Source/Scene/3D/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required (VERSION 3.10)
 
 set(SRC 
 	./Components/ParticlesSystem.cpp
+	./Components/Mesh.cpp
 	)
 
 add_library(3D ${SRC})
