--- a/Source/Scene/CMakeLists.txt
+++ b/Source/Scene/CMakeLists.txt
@@ -5,7 +5,8 @@ set(SRC
 	Object.cpp
 	./3D/Components/Mesh.cpp
 	./3D/Components/ParticlesSystem.cpp
+	./Common/ShaderMaterial.cpp
 	)
 
 add_library(Scene ${SRC})
-target_link_libraries(Scene assimp)
+target_link_libraries(Scene Graphics assimp)
