--- a/Source/Core/CMakeLists.txt
+++ b/Source/Core/CMakeLists.txt
@@ -9,5 +9,5 @@ add_library(Core ${SRC})
 add_subdirectory(OS)
 add_subdirectory(Parsers)
 
+#target_link_libraries(Core OS Parsers)
 #target_link_libraries(Core OS)
-target_link_libraries(Core OS Parsers)
