--- a/Source/Graphics/GLFW/CMakeLists.txt
+++ b/Source/Graphics/GLFW/CMakeLists.txt
@@ -7,5 +7,4 @@ set(SOURCE
 	)
 
 add_library(GraphicsGLFW ${SOURCE})
-
-target_link_libraries(GraphicsGLFW glfw)
+#target_link_libraries(GraphicsGLFW glfw)
