Show Maya and White Square with the Skybox

--- a/Source/Core/OS/CMakeLists.txt
+++ b/Source/Core/OS/CMakeLists.txt
@@ -10,3 +10,4 @@ add_subdirectory(Input)
 
 #target_link_libraries(OS Input)
 #target_link_libraries(OS Input Graphics)
+target_link_libraries(OS GraphicsGLFW)
