--- a/Source/Core/CMakeLists.txt
+++ b/Source/Core/CMakeLists.txt
@@ -5,9 +5,9 @@ set(SRC
 	)
 
 add_library(Core ${SRC})
+target_link_libraries(Core OS)
 
 add_subdirectory(OS)
 add_subdirectory(Parsers)
 
-#target_link_libraries(Core OS Parsers)
-#target_link_libraries(Core OS)
+target_link_libraries(Core GraphicsVulkan Parsers)
