--- a/Source/Scene/CMakeLists.txt
+++ b/Source/Scene/CMakeLists.txt
@@ -3,10 +3,9 @@ cmake_minimum_required (VERSION 3.10)
 set(SRC 
 	Scene.cpp
 	Object.cpp
-	./3D/Components/Mesh.cpp
-	./3D/Components/ParticlesSystem.cpp
 	)
 
 add_library(Scene ${SRC})
+add_subdirectory(3D)
 #target_link_libraries(Scene ECS Graphics assimp)
-target_link_libraries(Scene Input Materials)
+target_link_libraries(Scene Input 3D Materials)
