--- a/Source/Core/Renderer/GLFW/CMakeLists.txt
+++ b/Source/Core/Renderer/GLFW/CMakeLists.txt
@@ -3,7 +3,14 @@ cmake_minimum_required (VERSION 3.10)
 #list(APPEND CMAKE_MODULE_PATH "~/.brew/lib/cmake/glfw3")
 find_package(glfw3)
 
-if (UNIX)
+if (APPLE)
+	if (glfw3_FOUND)
+		message("GLFW3 FOUND")
+		include_directories("/usr/local/include/")
+	else()
+		execute_process(COMMAND brew install glfw3)
+	endif()
+elseif (UNIX)
 	if (glfw3_FOUND)
 		message("GLFW3 FOUND")
 		include_directories("/usr/include/")
