--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,29 +2,33 @@ cmake_minimum_required (VERSION 3.10)
 set(CMAKE_CXX_COMPILER g++)
 set (CMAKE_CXX_STANDARD 17)
 
-#set(GLFW_BUILD_EXAMPLES "Build the GLFW example programs" OFF FORCE)
-#set(GLFW_BUILD_TESTS "Build the GLFW test programs" OFF FORCE)
-
 if (UNIX AND NOT APPLE)
-	set(CMAKE_CXX_COMPILER g++)
-	execute_process(COMMAND apt-get install libx11-dev)
-	execute_process(COMMAND apt-get install xorg-dev libglu1-mesa-dev)
-	execute_process(COMMAND apt install libvulkan1 mesa-vulkan-drivers vulkan-utils)
+	execute_process(COMMAND sudo apt-get install libx11-dev)
+	execute_process(COMMAND sudo apt-get install xorg-dev libglu1-mesa-dev)
+	execute_process(COMMAND sudo apt install libvulkan1 mesa-vulkan-drivers vulkan-utils)
 endif()
 
 find_package(assimp)
-
-if (APPLE)
-	if (assimp_FOUND)
-		message("assimp FOUND")
-	else()
+if (assimp_FOUND)
+	message("assimp FOUND")
+else()
+	if (APPLE)
 		execute_process(COMMAND brew install assimp)
-	endif()
-elseif (UNIX)
-	if (glfw3_FOUND)
-		message("assimp FOUND")
-	else()
+	elseif (UNIX)
 		execute_process(COMMAND sudo apt-get install libassimp-dev)
+	endif()
+
+endif()
+
+#list(APPEND CMAKE_MODULE_PATH "~/.brew/lib/cmake/glfw3")
+find_package(glfw3)
+if (glfw3_FOUND)
+	message("GLFW3 FOUND")
+else()
+	if (APPLE)
+		execute_process(COMMAND brew install glfw3)
+	elseif (UNIX)
+		execute_process(COMMAND sudo apt-get install libglfw3)
 	endif()
 endif()
 
@@ -35,18 +39,10 @@ endif()
 
 include_directories(Source)
 include_directories(Modules)
-#include_directories(ThirdParty/glfw/include/)
 include_directories(/usr/include/)
-#include_directories(ThirdParty/assimp_lib/include/)
-#include_directories(ThirdParty/assimp_lib/code)
 include_directories(ThirdParty/)
 
 project(Soon)
-
-#option (ASSIMP_BUILD_TESTS OFF)
-#option(ASSIMP_NO_EXPORT "" ON)
-#option (ASSIMP_BUILD_ALL_IMPORTERS_BY_DEFAULT "" OFF)
-#set(ASSIMP_BUILD_OBJ_IMPORTER ON FORCE)
 
 add_subdirectory(ThirdParty)
 add_subdirectory(Modules)
