--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,9 @@ set(CMAKE_CXX_COMPILER g++)
 set (CMAKE_CXX_STANDARD 17)
 
 if (UNIX AND NOT APPLE)
-	execute_process(COMMAND sudo apt-get install libx11-dev)
-	execute_process(COMMAND sudo apt-get install xorg-dev libglu1-mesa-dev)
-	execute_process(COMMAND sudo apt install libvulkan1 mesa-vulkan-drivers vulkan-utils)
+	#execute_process(COMMAND sudo apt-get install libx11-dev)
+	#execute_process(COMMAND sudo apt-get install xorg-dev libglu1-mesa-dev)
+	#execute_process(COMMAND sudo apt install libvulkan1 mesa-vulkan-drivers vulkan-utils)
 endif()
 
 find_package(assimp)
@@ -15,7 +15,7 @@ else()
 	if (APPLE)
 		execute_process(COMMAND brew install assimp)
 	elseif (UNIX)
-		execute_process(COMMAND sudo apt-get install libassimp-dev)
+		#execute_process(COMMAND sudo apt-get install libassimp-dev)
 	endif()
 
 endif()
@@ -28,7 +28,7 @@ else()
 	if (APPLE)
 		execute_process(COMMAND brew install glfw3)
 	elseif (UNIX)
-		execute_process(COMMAND sudo apt-get install libglfw3)
+		#execute_process(COMMAND sudo apt-get install libglfw3)
 	endif()
 endif()
 
